--- a/MenuPrincipal/src/main/resources/com/menu/menuprincipal/hello-view.fxml
+++ b/MenuPrincipal/src/main/resources/com/menu/menuprincipal/hello-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="485.0" prefWidth="457.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.inicio.pantallainicial.MenuPrincipal.MenuPrincipalController">
+<VBox alignment="CENTER" prefHeight="485.0" prefWidth="457.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.inicio.pantallainicial.MenuPrincipalController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
