--- a/PantallaInicial/src/main/resources/com/inicio/pantallainicial/MenuPrincipal.fxml
+++ b/PantallaInicial/src/main/resources/com/inicio/pantallainicial/MenuPrincipal.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" prefHeight="485.0" prefWidth="457.0" spacing="20.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/19" fx:controller="com.inicio.pantallainicial.MenuPrincipal.MenuPrincipalController">
+<VBox alignment="CENTER" prefHeight="485.0" prefWidth="457.0" spacing="20.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inicio.pantallainicial.MenuPrincipalController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
     </padding>
@@ -19,10 +19,11 @@
                         <Font name="Bookman Old Style Bold Italic" size="36.0" />
                     </font>
                 </Label>
-                <Button fx:id="btnJugar" layoutX="136.0" layoutY="132.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="147.0" text="Jugar" />
-                <Button fx:id="btnEditarEquipo" layoutX="136.0" layoutY="263.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="147.0" text="Editar equipo" />
-                <Button fx:id="btnCrearJugador" layoutX="136.0" layoutY="197.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="147.0" text="Crear jugador" />
-                <Button fx:id="btnEstadisticas" layoutX="136.0" layoutY="329.0" mnemonicParsing="false" prefHeight="37.0" prefWidth="147.0" text="Estadisticas" />
+                <Button fx:id="btnJugar" layoutX="135.0" layoutY="125.0" mnemonicParsing="false" onAction="#jugar" prefHeight="37.0" prefWidth="147.0" text="Jugar" />
+                <Button fx:id="btnEditarEquipo" layoutX="136.0" layoutY="247.0" mnemonicParsing="false" onAction="#editarEquipo" prefHeight="37.0" prefWidth="147.0" text="Editar equipo" />
+                <Button fx:id="btnCrearJugador" layoutX="136.0" layoutY="186.0" mnemonicParsing="false" onAction="#crearJugador" prefHeight="37.0" prefWidth="147.0" text="Crear jugador" />
+                <Button fx:id="btnEstadisticas" layoutX="136.0" layoutY="307.0" mnemonicParsing="false" onAction="#estadisticas" prefHeight="37.0" prefWidth="147.0" text="Estadisticas" />
+            <Button fx:id="btnSalir" layoutX="136.0" layoutY="369.0" mnemonicParsing="false" onAction="#salir" prefHeight="37.0" prefWidth="147.0" text="Salir" />
             </children>
         </AnchorPane>
     </children>
