--- a/PantallaInicial/src/main/resources/com/inicio/pantallainicial/EditarEquipo.fxml
+++ b/PantallaInicial/src/main/resources/com/inicio/pantallainicial/EditarEquipo.fxml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.inicio.pantallainicial.EditarEquipoController"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="462.0" prefWidth="865.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inicio.pantallainicial.EditarEquipoController">
+   <children>
+      <Button fx:id="btnVolver" layoutX="397.0" layoutY="356.0" mnemonicParsing="false" onAction="#volver" text="Volver" />
+      <Label layoutX="151.0" layoutY="52.0" text="EDITA TU EQUIPO">
+         <font>
+            <Font name="System Bold" size="32.0" />
+         </font>
+      </Label>
+      <Button fx:id="btnAplicar" layoutX="134.0" layoutY="356.0" mnemonicParsing="false" onAction="#aplicarCambios" text="Aplicar" />
+      <ComboBox fx:id="cmbBase" layoutX="85.0" layoutY="147.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbEscolta" layoutX="347.0" layoutY="147.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbAlero" layoutX="85.0" layoutY="219.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbAlapivot" layoutX="347.0" layoutY="219.0" prefWidth="150.0" />
+      <ComboBox fx:id="cmbPivot" layoutX="211.0" layoutY="290.0" prefWidth="150.0" />
+      <TableView layoutX="527.0" layoutY="57.0" prefHeight="325.0" prefWidth="301.0">
+        <columns>
+          <TableColumn fx:id="colNombre" prefWidth="75.0" text="Nombre" />
+          <TableColumn fx:id="colAtaque" prefWidth="75.0" text="Ataque" />
+            <TableColumn fx:id="colDefensa" prefWidth="75.0" text="Defensa" />
+            <TableColumn fx:id="colDestreza" prefWidth="75.0" text="Destreza" />
+        </columns>
+      </TableView>
+   </children>
 </AnchorPane>
