Nueva clase Jugadores, DBManager, funcionalidades de CrearJugador y editarequipo

--- a/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/EditarEquipo.fxml
+++ b/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/EditarEquipo.fxml
@@ -28,6 +28,7 @@
           <TableColumn fx:id="colAtaque" prefWidth="75.0" text="Ataque" />
             <TableColumn fx:id="colDefensa" prefWidth="75.0" text="Defensa" />
             <TableColumn fx:id="colDestreza" prefWidth="75.0" text="Destreza" />
+            <TableColumn fx:id="colPosicion" prefWidth="75.0" text="Posicion" />
         </columns>
       </TableView>
    </children>
