Cofirmacion de borrado de cuenta hecho

--- a/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/CambiarNombreUsuario.fxml
+++ b/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/CambiarNombreUsuario.fxml
@@ -1,14 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.inicio.pantallainicial.CambiarNombreUsuario"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="279.0" prefWidth="456.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inicio.pantallainicial.CambiarNombreUsuario">
+   <children>
+      <Button fx:id="btnVolver" layoutX="78.0" layoutY="205.0" mnemonicParsing="false" onAction="#volver" text="Volver" />
+      <Button fx:id="btnAplicar" layoutX="332.0" layoutY="205.0" mnemonicParsing="false" onAction="#aplicar" text="Aplicar" />
+      <TextField fx:id="txtNuevoNombre" layoutX="154.0" layoutY="134.0" />
+      <Label layoutX="42.0" layoutY="57.0" text="Escriba su nuevo nombre de usuario">
+         <font>
+            <Font name="System Bold" size="22.0" />
+         </font>
+      </Label>
+   </children>
 </AnchorPane>
