--- a/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/CambiarClave.fxml
+++ b/Programa/PantallaInicial/src/main/resources/com/inicio/pantallainicial/CambiarClave.fxml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.inicio.pantallainicial.CambiarClave"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="401.0" prefWidth="564.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.inicio.pantallainicial.CambiarClave">
+   <children>
+      <Button fx:id="btnVolver" layoutX="86.0" layoutY="321.0" mnemonicParsing="false" onAction="#volver" text="Volver" />
+      <Button fx:id="btnAplicar" layoutX="430.0" layoutY="321.0" mnemonicParsing="false" onAction="#aplicar" text="Aplicar" />
+      <TextField fx:id="txtClaveAntigua" layoutX="233.0" layoutY="159.0" />
+      <TextField fx:id="txtClaveNueva" layoutX="233.0" layoutY="227.0" />
+      <Label layoutX="73.0" layoutY="60.0" text="Escriba su antigua contraseña y su nueva contraseña">
+         <font>
+            <Font name="System Bold" size="17.0" />
+         </font>
+      </Label>
+      <Label layoutX="111.0" layoutY="163.0" text="Contraseña antigua:" />
+      <Label layoutX="119.0" layoutY="231.0" text="Nueva contraseña:" />
+   </children>
 </AnchorPane>
